bugfixes, kan også starte/pause

--- a/webver/index.html
+++ b/webver/index.html
@@ -61,6 +61,10 @@
 	<button id="cancelButton" onclick="cancelButton()">Angre</button>
 </div>
 
+<p>Status: <span id="simStatus">pause</span></p>
+<button onclick="startSim()" id="startButton">Start</button>
+<button onclick="stopSim()" id="stopButton">Stop</button>
+
 <div id="console">
 
 </div>
