Spritesheets, kart, skjellett til spashscreen, pluss masse anna

--- a/webver/index2.html
+++ b/webver/index2.html
@@ -6,6 +6,7 @@
 	<meta charset="utf8" />
 	<link href="css/styles.css" rel="stylesheet" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 	
@@ -32,7 +33,12 @@
 	<script type="text/javascript" src="js/mapCell.js"></script>
 	<script type="text/javascript" src="js/projectile.js"></script>
 	<script type="text/javascript" src="js/wall.js"></script>
-	<script type="text/javascript" src="js/weapon.js"></script>
+  <script type="text/javascript" src="js/weapon.js"></script>
+  <script type="text/javascript" src="js/twoPlayerMap.js"></script>
+  <script type="text/javascript" src="js/splashscreen.js"></script>
+
+
+  <script type="text/javascript" src="img/spritesheet.json"></script>
 
 
 
