--- a/webver/index2.html
+++ b/webver/index2.html
@@ -36,6 +36,7 @@
   <script type="text/javascript" src="js/weapon.js"></script>
   <script type="text/javascript" src="js/twoPlayerMap.js"></script>
   <script type="text/javascript" src="js/splashscreen.js"></script>
+  <script type="text/javascript" src="js/mouselistener.js"></script>
 
 
   <script type="text/javascript" src="img/spritesheet.json"></script>
