Map format in json!

--- a/webver/index2.html
+++ b/webver/index2.html
@@ -35,6 +35,7 @@
 	<script type="text/javascript" src="js/wall.js"></script>
   <script type="text/javascript" src="js/weapon.js"></script>
   <script type="text/javascript" src="js/twoPlayerMap.js"></script>
+  <script type="text/javascript" src="js/twoPlayerMap.json"></script>
   <script type="text/javascript" src="js/splashscreen.js"></script>
   <script type="text/javascript" src="js/mouselistener.js"></script>
 
