--- a/webver/index2.html
+++ b/webver/index2.html
@@ -14,7 +14,7 @@
 		<header>
     		<h1>Garbage alert</h1>
   		</header>
-		<div id="main_wrapper">
+		<div id="main_wrapper" align="center">
 			<canvas width="512" height="512" id="canvas"></canvas>
 		</div>
 	</div>
