Justering av prosjektil, skyteknapp

--- a/webver/index2.html
+++ b/webver/index2.html
@@ -16,6 +16,8 @@
   		</header>
 		<div id="main_wrapper" align="center">
 			<canvas width="512" height="512" id="canvas"></canvas>
+      
+      <button onclick="fireProjectile()">Skyt!</button>
 		</div>
 	</div>
 
