--- a/webver/index2.html
+++ b/webver/index2.html
@@ -15,8 +15,9 @@
     		<h1>Garbage alert</h1>
   		</header>
 		<div id="main_wrapper" align="center">
+      <button onclick="muteSound()">Mute</button>
 			<canvas width="512" height="512" id="canvas"></canvas>
-      
+      <audio id="introMusic" src="audio/introMusic.ogg" />
       <button onclick="fireProjectile()">Skyt!</button>
 		</div>
 	</div>
