mute husker tidligere innstillinger

--- a/webver/index2.html
+++ b/webver/index2.html
@@ -15,7 +15,7 @@
     		<h1>Garbage alert</h1>
   		</header>
 		<div id="main_wrapper" align="center">
-      <button onclick="muteSound()">Mute</button>
+      <button onclick="toggleMute()">Mute</button>
 			<canvas width="512" height="512" id="canvas"></canvas>
       <audio id="introMusic" src="audio/introMusic.ogg" />
       <button onclick="fireProjectile()">Skyt!</button>
