--- a/webver/indexold.html
+++ b/webver/indexold.html
@@ -1,56 +1,48 @@
 <!doctype html>
 
 <html>
+
 <head>
-	<title>Garbage alert</title>
+	<link rel="stylesheet" href="styles.css"></link>
 	<meta charset="utf8" />
-	<link href="css/styles.css" rel="stylesheet" />
-	<link href='http://fonts.googleapis.com/css?family=PT+Sans|PT+Serif' rel='stylesheet' type='text/css'>
-
 </head>
+
+
 <body>
-	
-	<div id="page_wrapper">
-		<header>
-    		<h1>Garbage alert</h1>
-  		</header>
 
+<div id="envCapabilities">
+	<span id="hasPapp" class="false">PAPP</span>
+	<span id="hasTre" class="false">TRE</span>
+	<span id="hasPlast" class="false">PLAST</span>
+	<span id="hasJern" class="false">JERN</span>
+	<span id="hasStal" class="false">STÅL</span>
+	<span id="hasTitan" class="false">TITAN</span>
 
-  		<div id="main_wrapper" align="center">
+	<button onclick="upgradeEnv()" id="envButton">Oppgradere!</button>
+</div>
 
-  			<article id="game">
-  			
-  			<div id="canvas_wrapper">
-      			<button onclick="toggleMute()">Mute</button>
-				<canvas width="512" height="512" id="canvas"></canvas>
-      			<button onclick="fireProjectile()">Skyt!</button>
-      		</div>
+<div id="resources">
+	<p>Søppel: <span id="garbage">0</span><p>
+	<button onclick="addGarbage()">Legg til søppel</button>
+	<hr>
+	<p>Papp: <span id="papp">0</span></p>
+	<p>Tre: <span id="tre">0</span></p>
+	<p>Plast: <span id="plast">0</span></p>
+	<p>Jern: <span id="jern">0</span></p>
+	<p>Stål: <span id="stal">0</span></p>
+	<p>Titan: <span id="titan">0</span></p>
+</div>
 
+<hr>
+<div>
 
-			<aside id="resources">
-				<div>
-					<button onclick="upgradeEnv()" id="envButton">Oppgradere!</button>
+	<p>Miljøstasjon nivå <span id="envLevel">1</span></p>
+	<p>Mur: <span id="defenceLevel">0</span></p>
+	<p>Våpen nivå <span id="attackLevel">0</span></p>
 
-					<p>Søppel: <span id="garbage">0</span><p>
-					<button onclick="addGarbage()">Legg til søppel</button>
+</div>
 
-					<div class="envCapabilities"><span id="hasPapp" class="false denomination">Papp:</span> <span id="papp">0</span></div>
-					<div class="envCapabilities"><span id="hasTre" class="false denomination">Tre:</span> <span id="tre">0</span></div>
-					<div class="envCapabilities"><span id="hasPlast" class="false denomination">Plast:</span> <span id="plast">0</span></div>
-					<div class="envCapabilities"><span id="hasJern" class="false denomination">Jern:</span> <span id="jern">0</span></div>
-					<div class="envCapabilities"><span id="hasStal" class="false denomination">Stål:</span> <span id="stal">0</span></div>
-					<div class="envCapabilities"><span id="hasTitan" class="false denomination">Titan:</span> <span id="titan">0</span></div>
-				</div>
-
-			<div>
-				<p>Miljøstasjon nivå <span id="envLevel">1</span></p>
-				<p>Mur: <span id="defenceLevel">0</span></p>
-				<p>Våpen nivå <span id="attackLevel">0</span></p>
-			</div>
-
-			</aside>
-		</div>
-		</article>
+<hr>
 
 <div id="actions">
 	<button onClick="upgradeEnvThroughput()" id="defenceButton">Oppgradere miljøstasjon</button>
@@ -312,34 +304,35 @@
 <button onclick="startSim()" id="startButton">Start</button>
 <button onclick="stopSim()" id="stopButton">Stop</button>
 
+<div id="console">
 
-	</div>
-
-
-	<footer id="disclaimer">
-    <p>Made by re3.</p>
-  </footer>
-
-	<script type="text/javascript" src="js/scripts.js"></script>
-	<script type="text/javascript" src="js/factory.js"></script>
-	<script type="text/javascript" src="js/garbage.js"></script>
-	<script type="text/javascript" src="js/map.js"></script>
-	<script type="text/javascript" src="js/mapCell.js"></script>
-	<script type="text/javascript" src="js/projectile.js"></script>
-	<script type="text/javascript" src="js/wall.js"></script>
-  <script type="text/javascript" src="js/weapon.js"></script>
-  <script type="text/javascript" src="js/twoPlayerMap.js"></script>
-  <script type="text/javascript" src="js/twoPlayerMap.json"></script>
-  <script type="text/javascript" src="js/splashscreen.js"></script>
-  <script type="text/javascript" src="js/mouselistener.js"></script>
+</div>
 
 
-  <script type="text/javascript" src="img/spritesheet.json"></script>
+<script src="scripts.js"></script>
+<script src="jquery.js"></script>
 
-  <script src="scripts.js"></script>
-
-	<script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript">$(document).ready(init());</script>
+<script>
+	$(document).ready(function(){
+		init();
+	});
+</script>
 </body>
+
 </html>
 
+
+
+<!--
+var pappMurNewCost = {papp: 10};
+var plastMurNewCost = {papp: 15, plast: 10};
+var plastMurUpgradeCost = {plast: 10};
+var treMurNewCost = {papp: 20, tre: 10};
+var treMurUpgradeCost = {tre: 10};
+var jernMurNewCost = {papp: 10, tre: 10, jern: 10};
+var jernMurUpgradeCost = {papp: 5, tre: 5, jern: 10};
+var stalMurNewCost = {papp: 10, plast: 15};
+var stalMurUpgradeCost = {plast: 15};
+var megaMurNewCost = {papp: 20, plast: 20, tre: 20, jern: 20, stal: 20};
+var megaMurUpgradeCost = {papp: 20, plast: 20, tre: 20, jern: 20, stal: 20};
+-->
