--- a/webver/index.html
+++ b/webver/index.html
@@ -332,6 +332,7 @@
   <script type="text/javascript" src="js/twoPlayerMap.json"></script>
   <script type="text/javascript" src="js/splashscreen.js"></script>
   <script type="text/javascript" src="js/mouselistener.js"></script>
+  <script type="text/javascript" src="js/FactoryUpgrade.js"></script>
 
 
   <script type="text/javascript" src="img/spritesheet.json"></script>
