våpen tegnes ut som rosa flekker, samt opprydding i eksplosjonstegnerutinen

--- a/webver/index.html
+++ b/webver/index.html
@@ -333,6 +333,7 @@
   <script type="text/javascript" src="js/splashscreen.js"></script>
   <script type="text/javascript" src="js/mouselistener.js"></script>
   <script type="text/javascript" src="js/FactoryUpgrade.js"></script>
+  <script type="text/javascript" src="js/WeaponType.js"></script>
 
 
   <script type="text/javascript" src="img/spritesheet.json"></script>
