tegner ut sprites

--- a/webver/index.html
+++ b/webver/index.html
@@ -23,7 +23,7 @@
   			<div id="canvas_wrapper">
       			<button onclick="toggleMute()">Mute</button>
 				<canvas width="512" height="512" id="canvas"></canvas>
-      			<button onclick="fireProjectile()">Skyt!</button>
+      			<button onclick="fireProjectile(weapons[0])">Skyt!</button>
       		</div>
 
 
@@ -319,7 +319,6 @@
 	<footer id="disclaimer">
     <p>Made by re3.</p>
   </footer>
-
 	<script type="text/javascript" src="js/scripts.js"></script>
 	<script type="text/javascript" src="js/factory.js"></script>
 	<script type="text/javascript" src="js/garbage.js"></script>
@@ -334,6 +333,9 @@
   <script type="text/javascript" src="js/mouselistener.js"></script>
   <script type="text/javascript" src="js/FactoryUpgrade.js"></script>
   <script type="text/javascript" src="js/WeaponType.js"></script>
+
+	<script type="text/javascript" src="js/Resources.js"></script>
+  
 
 
   <script type="text/javascript" src="img/spritesheet.json"></script>
