Enkelt notification-system for bruk til naturkatastrofer på plass

--- a/webver/index.html
+++ b/webver/index.html
@@ -34,6 +34,9 @@
 					<p>Søppel: <span id="garbage">0</span><p>
 					<button onclick="addGarbage()">Legg til søppel</button>
 
+					<button onclick="addNotification()">Debug</button>
+
+
 					<!-- <div class="envCapabilities"><span id="hasPapp" class="false denomination">Papp:</span> <span id="papp">0</span></div>
 					<div class="envCapabilities"><span id="hasTre" class="false denomination">Tre:</span> <span id="tre">0</span></div>
 					<div class="envCapabilities"><span id="hasPlast" class="false denomination">Plast:</span> <span id="plast">0</span></div>
@@ -336,6 +339,7 @@
 
 	<script type="text/javascript" src="js/Resources.js"></script>
 	<script type="text/javascript" src="js/CapabilityUpgrade.js"></script>
+	<script type="text/javascript" src="js/Notification.js"></script>
   
 
 
